[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Items/Effects/SpeedUp.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/PerkSelection/PerkCard.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

const float offset = 0.2;

void vertex(){	
	//Border
	
	
	//COLOR = vec4(0.9*UV.x, 0.6*UV.x, 0.9, 1.0);
	
	if (UV.x < offset){//} || UV.x > 1.0-offset || UV.y < offset || UV.y > 1.0-offset){
		COLOR = vec4(0.9,0.0,0.0,1.0);
	}

	
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="PerkCard" type="PanelContainer"]
pause_mode = 2
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -972.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 300 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 557.0
margin_bottom = 893.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_right = 550.0
margin_bottom = 886.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 550.0
margin_bottom = 886.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 550.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 75.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "PERK_NAME"

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 506.0
margin_right = 550.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
text = "RARITY"
align = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 550.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 697.0
margin_top = 40.0
margin_right = 825.0
margin_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 550.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "THIS IS THE DESCRIPTION"
autowrap = true

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 7.0
margin_top = 7.0
margin_right = 557.0
margin_bottom = 893.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
